--- a/webui/templates/webui.html
+++ b/webui/templates/webui.html
@@ -10,9 +10,9 @@
     <div id="app">
         <nav id="nav">
             <ul>
-                <li><a href="#base-info" data-id="base-info">基础信息</a></li>
-                <li><a href="#plugin-manage" data-id="plugin-manage">插件管理</a></li>
-                <li><a href="#log-view" data-id="log-view">日志查看</a></li>
+                <li><a href="./base-info" data-id="base-info">基础信息</a></li>
+                <li><a href="./plugin-manage" data-id="plugin-manage">插件管理</a></li>
+                <li><a href="./log-view" data-id="log-view">日志查看</a></li>
             </ul>
         </nav>
         <div id="content">
