--- a/webui/templates/webui.html
+++ b/webui/templates/webui.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,22 +9,23 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <title>AmiaBot WebUI</title>
 </head>
+
 <body>
     <div id="app">
         <nav id="nav">
             <ul>
                 <li><a href="./base-info" data-id="base-info">
-                    <i class="fas fa-info-circle" style="margin-right: 12px; width: 18px; text-align: center;"></i>
-                    基础信息
-                </a></li>
+                        <i class="fas fa-info-circle"></i>
+                        基础信息
+                    </a></li>
                 <li><a href="./plugin-manage" data-id="plugin-manage">
-                    <i class="fas fa-puzzle-piece" style="margin-right: 12px; width: 18px; text-align: center;"></i>
-                    插件管理
-                </a></li>
+                        <i class="fas fa-puzzle-piece"></i>
+                        插件管理
+                    </a></li>
                 <li><a href="./log-view" data-id="log-view">
-                    <i class="fas fa-history" style="margin-right: 12px; width: 18px; text-align: center;"></i>
-                    日志查看
-                </a></li>
+                        <i class="fas fa-history"></i>
+                        日志查看
+                    </a></li>
             </ul>
         </nav>
         <div id="content">
@@ -35,4 +37,5 @@
     </div>
     <script src="/static/js/main.js"></script>
 </body>
+
 </html>
