--- a/webui/static/css/base-info.css
+++ b/webui/static/css/base-info.css
@@ -2,7 +2,7 @@
     display              : grid;
     grid-gap             : 12px;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows   : repeat(2, auto);
+    grid-template-rows   : repeat(3, auto);
 }
 
 #user-info {
@@ -37,6 +37,11 @@
 }
 
 /* 系统信息样式 */
+#system-info {
+    grid-column: 1 / 2;
+    grid-row   : 2 / 4;
+}
+
 .system-info-grid {
     display              : grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -77,9 +82,11 @@
     border-radius   : 4px;
     transition      : width 0.3s ease;
 }
-.system-info-bar-fill.secondary{
+
+.system-info-bar-fill.secondary {
     background-color: var(--color-primary-container);
 }
+
 /* 响应式设计 */
 @media (max-width: 768px) {
     .system-info-grid {
@@ -89,7 +96,7 @@
 
 
 #hitokoto {
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
     grid-row   : 3 / 4;
 }
 
