--- a/webui/templates/webui.html
+++ b/webui/templates/webui.html
@@ -7,6 +7,7 @@
     <!-- 引入Font Awesome图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/webui.css">
     <title>AmiaBot WebUI</title>
 </head>
 
