--- a/webui/templates/webui.html
+++ b/webui/templates/webui.html
@@ -36,6 +36,9 @@
             <div id="page"></div>
         </div>
     </div>
+    <!-- 弹窗容器，用于动态显示alert信息 -->
+    <div id="alerts-container"></div>
+
     <script src="/static/js/main.js"></script>
 </body>
 
