feat(message-view): 添加消息查看器页面及相关组件
 - 实现新的消息查看器页面，包含HTML、CSS和TypeScript实现
 - 添加message-view.html页面及UI元素
 - 实现消息专用CSS样式
 - 创建用于处理消息显示和分页的TypeScript类
 - 在amia/__init__.py中处理WebSocket消息
 - 在webui.html中添加导航链接
 - 在app.py日志端点中添加过滤功能
 - 更新.gitignore文件以包含新目录

--- a/webui/templates/webui.html
+++ b/webui/templates/webui.html
@@ -15,18 +15,30 @@
     <div id="app">
         <nav id="nav">
             <ul>
-                <li><a href="./base-info" data-id="base-info">
+                <li>
+                    <a href="./base-info" data-id="base-info">
                         <i class="fas fa-info-circle"></i>
                         基础信息
-                    </a></li>
-                <li><a href="./plugin-manage" data-id="plugin-manage">
+                    </a>
+                </li>
+                <li>
+                    <a href="./plugin-manage" data-id="plugin-manage">
                         <i class="fas fa-puzzle-piece"></i>
                         插件管理
-                    </a></li>
-                <li><a href="./log-view" data-id="log-view">
+                    </a>
+                </li>
+                <li>
+                    <a href="./log-view" data-id="log-view">
                         <i class="fas fa-history"></i>
                         日志查看
-                    </a></li>
+                    </a>
+                </li>
+                <li>
+                    <a href="./message-view" data-id="message-view">
+                        <i class="fas fa-comment-dots"></i>
+                        消息查看
+                    </a>
+                </li>
             </ul>
         </nav>
         <div id="content">
