feat(group-categories): 添加群组分类管理功能
- 在网页端实现群组分类管理功能
- 新增用于群组分类增删改查操作的 API 接口
- 创建用于处理群组相关功能的 `group.py` 模块
- 新增用于群组分类管理的网页和样式
- 在 `amia` 模块中启用接收消息的日志记录

--- a/webui/templates/webui.html
+++ b/webui/templates/webui.html
@@ -39,6 +39,12 @@
                         消息查看
                     </a>
                 </li>
+                <li>
+                    <a href="./group-categories" data-id="group-categories">
+                        <i class="fas fa-folder-open"></i>
+                        群组分类
+                    </a>
+                </li>
             </ul>
         </nav>
         <div id="content">
