--- a/webui/static/css/style.css
+++ b/webui/static/css/style.css
@@ -296,7 +296,8 @@ select:focus {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+textarea {
     padding         : 6px 12px;
     border          : 1px solid var(--color-outline);
     border-radius   : 8px;
@@ -308,21 +309,23 @@ input[type="password"] {
 }
 
 input[type="text"]:hover,
-input[type="password"]:hover {
+input[type="password"]:hover,
+textarea:hover {
     border-color: var(--color-primary);
 }
 
 input[type="text"]:focus,
-input[type="password"]:focus {
+input[type="password"]:focus,
+textarea:focus {
     border-color: var(--color-primary);
     box-shadow  : 0 0 0 2px rgba(131, 76, 117, 0.2);
 }
 
 *::-webkit-scrollbar {
-    display: none;
+    display  : none;
     /* width : 8px;
-    height: 8px;
-    opacity: .5; */
+    height   : 8px;
+    opacity  : .5; */
 }
 
 /* *::-webkit-scrollbar-track {
@@ -390,7 +393,9 @@ input[type="password"]:focus {
     left      : 50%;
     transform : translate(-50%, -50%);
     max-height: 80vh;
+    min-height: 30vh;
     max-width : 80vw;
+    min-width : 30vw;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, opacity 0.3s ease;
     opacity   : 1;
