--- a/webui/templates/webui.html
+++ b/webui/templates/webui.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/webui.css">
+    <link rel="stylesheet" href="/static/css/plugin-config.css">
     <title>AmiaBot WebUI</title>
 </head>
 
