--- a/webui/static/css/base-info.css
+++ b/webui/static/css/base-info.css
@@ -79,7 +79,7 @@
     top             : 0;
     height          : 100%;
     background-color: var(--color-primary);
-    border-radius   : 4px;
+    border-radius   : 0 4px 4px 0;
     transition      : width 0.3s ease;
 }
 
